--- a/src/pages/Search/_Search.scss
+++ b/src/pages/Search/_Search.scss
@@ -39,6 +39,7 @@
     padding: 0;
     visibility: hidden;
     opacity: 0;
+    color: map-get($color, secondary);
     // clear-btn 出現
     &--show {
       visibility: visible;
