--- a/src/scss/base/_global-styles.scss
+++ b/src/scss/base/_global-styles.scss
@@ -18,7 +18,6 @@ body {
     color: deep-map-get($color, primary);
     background-color: black;
     font-family: "Nunito Sans", sans-serif;
-    // height: 100vh;
     height: 100%;
     overflow-y: scroll;
 
@@ -120,7 +119,6 @@ main {
     @include flex;
     font-weight: bold;
     column-gap: 1.5rem;
-
     @include sm {
         @include text(sm);
         column-gap: 8px;
@@ -129,7 +127,6 @@ main {
     // 除了首個子層以外，其餘皆套用以下樣式
     & > p:not(:first-child) {
         display: flex;
-
         // 左側豎槓
         &::before {
             content: "";
@@ -138,16 +135,14 @@ main {
             height: 100%;
             background-color: map-get($color, primary-dark);
         }
-
+        // icon
         i {
             margin-left: 1.5rem;
-
             @include sm {
                 margin-left: 0.5rem;
             }
         }
     }
-
     // info 內的 icon 統一設定 margin-right
     i {
         margin-right: 0.5rem;
@@ -168,8 +163,6 @@ main {
 // scrollToTop 套件樣式
 .scroll-to-top {
     @include flex($ai: center, $jc: center);
-    // width: 4.375rem !important;
-    // height: 4.375rem !important;
     border-radius: 50% !important;
     width: 3.125rem !important;
     height: 3.125rem !important;
@@ -192,9 +185,14 @@ main {
     transition: map-get($transition, 500);
     transition-property: opacity visivility;
     background-color: rgb(0 0 0 / 85%);
-
+    // .spinner-full-screen 啟用狀態
     &.active {
         visibility: visible;
         opacity: 1;
     }
+}
+
+
+.pointer-events-none{
+    pointer-events: none;
 }
