[修正] 補齊 input 與 button 缺失的 font-family / [新增] 將 font-family 抽離成 SCSS variable

--- a/src/pages/Search/_Search.scss
+++ b/src/pages/Search/_Search.scss
@@ -27,6 +27,7 @@
       background-color: map-get($color, tertiary);
       border-radius: map-get($border-radius, base);
       border: 0;
+      font-family: $primary-font;
       outline: none;
       @include sm {
         @include text(lg);
