--- a/src/pages/Home/_Home.scss
+++ b/src/pages/Home/_Home.scss
@@ -87,7 +87,7 @@
       width: 100%;
       height: 100%;
       background-image: linear-gradient(210deg, rgb(0 0 0 / 0%), rgba(0, 0, 0, 0.9));
-      @include sm {
+      @include md {
         background-image: linear-gradient(to bottom, rgb(0 0 0 / 20%), rgb(0, 0, 0));
       }
     }
