--- a/src/pages/Home/_Home.scss
+++ b/src/pages/Home/_Home.scss
@@ -55,28 +55,25 @@
     }
   }
 
-  //* hero section slide
+  //* hero__slide-link (每一張 slide 都是 link)
   &__slide-link {
     $block: &;
+    @include flex($dir: column);
     position: relative;
-    display: block;
-    height: 100%;
-    text-align: left;
+    height: 100vh;
+    @media not all and (hover: hover) {
+      height: var(--app-height);
+    }
   }
 
-  //* slide 圖片部分
-  &__slide-imgs {
+  //* hero__slide-img-wrapper (圖片部分)
+  &__slide-img-wrapper {
     position: relative;
     display: block;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     @include lg {
       max-height: none;
-    }
-    @include md {
-      @media not all and (hover: hover) {
-        height: var(--app-height);
-      }
     }
     &::before {
       content: "";
@@ -90,30 +87,23 @@
       @include md {
         background-image: linear-gradient(to bottom, rgb(0 0 0 / 20%), rgb(0, 0, 0));
       }
+      @include sm {
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), #000);
+      }
     }
   }
 
-  //@ backdrop 將於 breakpoint <= md 時被隱藏，替換成 poster
+  // hero__slide-img
+  // 父層為 <picture>
+  // - 在 breakpoint md 以上時，使用 backdrop
+  // - 在 breakpoint md (含)以下時，使用 poster
   &__slide-img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    // img tag (backdrop)
-    &--backdrop {
-      @include md {
-        display: none;
-      }
-    }
-    // img tag (poster)
-    &--poster {
-      display: none;
-      @include md {
-        display: inline-block;
-      }
-    }
   }
 
-  //* slide 文字部分
+  //* .hero__slide-text (文字部分)
   //! 注意: 有關文字的 transition 相關設定在最底下
   &__slide-text {
     @include flex($dir: column, $jc: flex-end);
@@ -129,6 +119,15 @@
     padding-bottom: 6rem;
     @include xl {
       max-width: 62.5rem;
+    }
+    @include md {
+    }
+    @include sm {
+      // position: static;
+      // justify-content: flex-start;
+      width: auto;
+      // flex: 1 1 auto;
+      margin-top: 2rem;
     }
     // 選中所有的直接子層
     & > :nth-child(n) {
@@ -160,6 +159,8 @@
       @include text(4xl);
     }
     @include sm {
+      // 限制電影標題行數最多 2 行
+      @include ellipsis-text(2);
       @include text(3xl);
     }
   }
@@ -169,15 +170,12 @@
     @include flex($jc: flex-start);
     @include text(xl);
     font-weight: bold;
-    i {
-      margin-right: 1rem;
-    }
     @include sm {
-      @include text(lg);
+      @include text(base);
     }
   }
 
-  // 文字介紹
+  // hero__slide-overview (文字介紹)
   &__slide-overview {
     max-width: 43.75rem;
     @include text(xl);
@@ -186,6 +184,8 @@
     }
     @include sm {
       @include text(base);
+      // 限制文字介紹行數最多 5 行
+      @include ellipsis-text(5);
     }
   }
 }
