--- a/src/scss/base/_global-styles.scss
+++ b/src/scss/base/_global-styles.scss
@@ -115,14 +115,14 @@ main {
     }
 }
 
-// 資訊區(上映日期、評分、放映時長)
+// 資訊(上映日期、評分、放映時長)
 .info {
     @include flex;
     font-weight: bold;
     column-gap: 1.5rem;
     @include sm {
         @include text(sm);
-        column-gap: 8px;
+        column-gap: 1rem;
     }
 
     // 除了首個子層以外，其餘皆套用以下樣式
@@ -140,13 +140,16 @@ main {
         i {
             margin-left: 1.5rem;
             @include sm {
-                margin-left: 0.5rem;
+                margin-left: 1rem;
             }
         }
     }
     // info 內的 icon 統一設定 margin-right
     i {
-        margin-right: 0.5rem;
+        margin-right: 0.75rem;
+        @include sm {
+            margin-right: 0.5rem;
+        }
     }
 }
 
