[修改] Home.js gernres swiper 間距

--- a/src/pages/Home/_Home.scss
+++ b/src/pages/Home/_Home.scss
@@ -7,8 +7,10 @@
   &__genres-list {
     @include flex($dir: column);
     @include x-spacing;
-    row-gap: 2rem;
     margin-top: 4rem;
+    @include md {
+      row-gap: 2rem;
+    }
   }
 
   //* genres item
