[修改] 對 map.scss 內的顏色做整理

--- a/src/components/GenresSwiper/_GenresSwiper.scss
+++ b/src/components/GenresSwiper/_GenresSwiper.scss
@@ -48,14 +48,14 @@
     &:hover {
       #{$bolck}__icon,
       #{$bolck}__name {
-        color: map-get($color, active);
+        color: map-get($color, tertiary);
       }
     }
   }
 
   // active 樣式
   &.active {
-    color: map-get($color, active);
+    color: map-get($color, tertiary);
   }
 
   // 類別 icon
