--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -146,11 +146,10 @@
     @include hover-query() {
       &:hover {
         color: map-get($color, tertiary);
-
         &::before {
           opacity: 1;
           transform: scaleX(1);
-          box-shadow: 0 0 13px 4px rgb(213 108 80);
+          box-shadow: 0 0 13px 4px map-get($color, tertiary);
         }
       }
     }
@@ -170,10 +169,9 @@
     // link 下方底線 active 狀態
     &.active {
       &::before {
+        background-color: map-get($color, tertiary-light);
         transform: scaleX(1);
-        background-color: map-get($color, tertiary);
-        background-color: rgb(237 135 108);
-        box-shadow: 0 0 13px 4px rgb(213 108 80);
+        box-shadow: 0 0 13px 4px map-get($color, tertiary);
       }
     }
     // 從最後數過來倒數第二個項目(watchlist)
