--- a/src/scss/abstracts/_map.scss
+++ b/src/scss/abstracts/_map.scss
@@ -35,10 +35,8 @@ $color: (
   // 半透明暗色背景
   overlay: rgba(0, 0, 0, 0.75),
   tertiary: rgb(213, 108, 80),
-  tertiary-light: hsl(13deg, 61%, 60%),
+  tertiary-light: rgb(237 135 108),
   tertiary-dark: hsl(13, 61%, 55%),
-  active: rgb(213, 108, 80),
-  // #831e1e
   // 用於淡色底線
   light-gray: #ffffff26,
 );
