--- a/src/scss/components/_btns.scss
+++ b/src/scss/components/_btns.scss
@@ -8,7 +8,7 @@
   transition-property: color, background-color;
 
   &--lg {
-    @include text(lg);
+    @include text(base);
     padding: 0.75em 1em;
     border-radius: map-get($border-radius, base);
     @include lg {
