--- a/src/components/WatchCards/_WatchCards.scss
+++ b/src/components/WatchCards/_WatchCards.scss
@@ -5,20 +5,37 @@
 $watchcards-column-gap: 1.25rem;
 // 每列在特定斷點分別要容納幾張卡片?
 $watchcards-card-amount: (
+   default: 6,
+   xl: 5,
+   lg: 4,
+   md: 4,
+   sm: 3,
+);
+// 每列在特定斷點分別有幾個 gap?
+$watchcards-gap-amount: (
    default: 5,
    xl: 4,
    lg: 3,
    md: 3,
    sm: 2,
 );
-// 每列在特定斷點分別有幾個 gap?
-$watchcards-gap-amount: (
-   default: 4,
-   xl: 3,
-   lg: 2,
-   md: 2,
-   sm: 1,
-);
+
+// // 每列在特定斷點分別要容納幾張卡片?
+// $watchcards-card-amount: (
+//    default: 5,
+//    xl: 4,
+//    lg: 3,
+//    md: 3,
+//    sm: 2,
+// );
+// // 每列在特定斷點分別有幾個 gap?
+// $watchcards-gap-amount: (
+//    default: 4,
+//    xl: 3,
+//    lg: 2,
+//    md: 2,
+//    sm: 1,
+// );
 
 .watchcards {
    @include cards($watchcards-column-gap);
